# CostHarbor

./: .editorconfig  .env.example  .gitignore  CHANGELOG.de.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.de.md  README.md  SECURITY.md  alembic.ini  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: ci.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_sync_interval.py  003_add_vrm_api_source_type.py  004_add_billing_parameters.py
app/: __init__.py  config.py  database.py  main.py  scheduler.py  version.py
app/audit/: models.py  routes.py
app/auth/: dependencies.py  models.py  routes.py  security.py
app/billing/: engine.py  models.py  parameters.py  pdf.py  routes.py
app/core/: models.py  routes.py
app/documents/: models.py  routes.py
app/sources/: models.py  routes.py
app/sources/adapters/: __init__.py  awattar.py  base.py  connection_test.py  homeassistant.py  shelly_csv.py  vrm_api.py  vrm_imap.py  vrm_imap_routes.py  vrm_upload.py
app/static/css/: custom.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html  login.html
app/templates/audit/: list.html
app/templates/billing/: list.html  new.html  parameters.html  parameters_form.html  preview.html  rules.html
app/templates/costs/: form.html  list.html
app/templates/documents/: list.html
app/templates/imports/: list.html  upload.html
app/templates/settings/: index.html
app/templates/sites/: form.html  list.html
app/templates/sources/: form.html  list.html  mappings.html
app/templates/tenants/: form.html  list.html
app/templates/units/: form.html  list.html
tests/: conftest.py  test_auth.py  test_billing.py  test_core.py  test_sources.py
tests/test_adapters/: test_awattar.py  test_shelly_csv.py
