[project]
name = "costharbor"
version = "0.1.0"
description = "Configurable utility billing and cost allocation web application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-multipart>=0.0.12",
    "jinja2>=3.1,<4",
    "itsdangerous>=2.1,<3",
    "bcrypt>=4.2,<6",
    "cryptography>=43,<47",
    "httpx>=0.27,<1",
    "pandas>=2.2,<4",
    "weasyprint>=62,<69",
    "apscheduler>=3.10,<4",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<8",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pip-audit>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "SIM"]
ignore = [
    "S101",   # assert in tests
    "S603",   # subprocess untrusted input
    "S607",   # subprocess partial path
    "S105",   # hardcoded passwords (test/example values)
    "S104",   # hardcoded bind-all (0.0.0.0 in config)
    "S108",   # hardcoded temp file paths
    "S110",   # try-except-pass
    "S112",   # try-except-continue
    "S324",   # hashlib insecure (used for checksums, not crypto)
    "B008",   # function-call-in-default-argument (FastAPI Depends/Query)
    "E402",   # module-import-not-at-top (alembic env, conftest)
    "E501",   # line too long (handled by formatter)
    "SIM105", # suppressible-exception (contextlib.suppress)
    "SIM108", # if-else-block-instead-of-ternary (readability)
    "N806",   # variable-in-function-should-be-lowercase (Session factory)
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402", "F401"]
"tests/*" = ["S105", "S108", "N806"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
